--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,6 +19,7 @@ button>i{margin-right: 5px}
 	.container{width: 100%;}
 }
 .btn{border-radius: 0px}
+.btn-file{margin-right: 10px; margin-bottom: 10px}
 .oculto{display: none}
 .modal-content{border-radius: 0px;}
 .container, .container-fluid { padding-left: 10px;}
