--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,3 +44,5 @@ footer.nb-footer .copyright p { margin: 0; padding: 0; padding-left: 10px;}
 .modal-evento-previsualizar{max-width: 600px}
 .hr-modal-evento-previsualizar{ margin-top: 0px; margin-bottom: 0px; }
 .modal-header { margin-bottom: 20px;}
+
+.mensaje-full-width{width: 100%; text-align: right;}
