--- a/templates/ambiente_detalle.html
+++ b/templates/ambiente_detalle.html
@@ -6,7 +6,7 @@
         <h4 class="modal-title">{{titulo_modal}}</h4>
       </div>
       <div class="modal-body">
-        <label class="texto-der" id="txtMensajeRptaAmbienteDetalle"></label>
+        <label class="texto-der mensaje-full-width" id="txtMensajeRptaAmbienteDetalle"></label>
         <label class="oculto" id="lblIdAmbiente">{{id}}</label>
         <div class="row">
           <div class="col-md-6">
@@ -68,9 +68,6 @@
           </div>
         </div>
         <hr>
-        <div class="row" style="margin-bottom:20px">
-          <h4 class="modal-title">Imágenes del Ambiente</h4>
-        </div>
         <div class="row">
           <div class="col-md-6">
             <div class="form-group" style="margin-bottom:10px">
@@ -83,6 +80,8 @@
               <button type="button" class="btn btn-default oculto" id="btnAsociarPrincipalAmbiente"><i class="fa fa-check" aria-hidden="true"></i>Asociar Imagen</button>
     					<progress id="progbar_principal" value="0" min="0" max="100" class="oculto" role=""></progress>
             </div>
+          </div>
+          <div class="col-md-6">
             <div class="form-group">
               <label for="txtLongitud" style="width:100%">Foto Menu</label>
               <input type="file" id="input_file_ambiente_menu" name="myFile" type="file" class="oculto"/>
@@ -93,9 +92,13 @@
     					<progress id="progbar_menu" value="0" min="0" max="100" class="oculto" role=""></progress>
             </div>
           </div>
-          <div class="col-md-6">
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-md-12">
             <div class="form-group" style="margin-bottom:10px">
-              <label for="txtLongitud" style="width:100%">Fotos Galería</label>
+              <label style="width:100%">Foto Galería</label>
+              <table class="list issues" style="" id="tablaAmbienteGaleria"></table>
             </div>
           </div>
         </div>
