Avance editar ambiente

--- a/templates/ambiente_detalle.html
+++ b/templates/ambiente_detalle.html
@@ -26,13 +26,13 @@
           <div class="col-md-6">
               <div class="form-group">
                 <label for="txtParrafoIzquierdo">Párrafo Izquierda</label><span class="texto-validacion"></span>
-                <textarea name="txtParrafoIzquierdo" id="txtParrafoIzquierdo" {{#if disabled}}disabled{{/if}}>{{parrafo_izquierdo}}</textarea>
+                <textarea name="txtParrafoIzquierdo" id="txtParrafoIzquierdo" {{#if disabled}}disabled{{/if}}>{{parrafo_izq}}</textarea>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
                 <label for="txtParrafoDerecho">Párrafo Derecho</label><span class="texto-validacion"></span>
-                <textarea name="txtParrafoDerecho" id="txtParrafoDerecho" {{#if disabled}}disabled{{/if}}>{{parrafo_derecho}}</textarea>
+                <textarea name="txtParrafoDerecho" id="txtParrafoDerecho" {{#if disabled}}disabled{{/if}}>{{parrafo_der}}</textarea>
               </div>
             </div>
         </div>
