--- a/templates/ambiente_detalle.html
+++ b/templates/ambiente_detalle.html
@@ -64,7 +64,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <button type="button" class="btn btn-default pull-right" id="btnGuardarDetalleAmbiente"><i class="fa fa-check" aria-hidden="true"></i>Guardar Cambios</button>
+            <button type="button" class="btn btn-default pull-right" id="btnGuardarDetalleAmbiente" {{#if disabled}}disabled{{/if}}><i class="fa fa-check" aria-hidden="true"></i>Guardar Cambios</button>
           </div>
         </div>
         <hr>
