Anexar foto de servicio

--- a/templates/servicio_detalle.html
+++ b/templates/servicio_detalle.html
@@ -48,7 +48,7 @@
           </div>
           <div class="col-md-6">
             <div class="form-group" style="margin-bottom:10px">
-              <label style="width:100%">Foto Principal</label>
+              <label style="width:100%">Foto del Servicio</label>
               <label id="foto_id" class="oculto">{{foto}}</label>
               <input type="file" id="input_file_foto" name="myFile" type="file" class="oculto"/>
               <button id="buscar_file_foto" {{#if disabled}}disabled{{/if}} class="btn btn-default btn-file pull-left"{{#if disable}}disabled{{/if}}><i class="fa fa-file-image-o" aria-hidden="true"></i>Buscar </button>
