--- a/assets/css/vanillaCalendar.css
+++ b/assets/css/vanillaCalendar.css
@@ -37,10 +37,12 @@
   overflow: visible;
   padding: 0;
   text-align: center;
+  /*
   &:active {
     border-radius: var(--vcal-border-radius);
     box-shadow: 0 0 0 2px rgba(var(--vcal-today-bg-color), 0.1)
   }
+  */
 }
 
 #v-cal .vcal-header {
